# LUTHE

./: .gitignore  CLAUDE.md  LUTHE.code-workspace  SOLUTION.md  commit_message.txt  project.md  setup.sh
.remember/memory/: project.md  self.md
docs/: gpu_csd_deepnn_macrobenchmark_plan.md  gpu_csd_e2e.md  gpu_csd_e2e_audit_20260202.md  gpu_csd_operator_contract.md  mock_gpu_perf_plan.md  storyline.md  wop_pbs_gpu_ssd_analysis.md  wop_pbs_openssd_integration_plan.md
hpu_fpga/hw/module/pe_pbs/rtl/: README_wop_pbs.md  wop_pbs_instruction_manager.sv  wop_pbs_kernel_simplified.sv
hw/common_lib/info/: file_list.json
hw/module/bsk/module/bsk_if/rtl/: bsk_if_axi4_read.sv  bsk_if_cache_control.sv
hw/module/bsk/module/bsk_manager/rtl/: bsk_manager.sv  bsk_mgr_cut.sv  bsk_mgr_node.sv
hw/module/instruction_scheduler/rtl/: instruction_scheduler.sv
hw/module/instruction_scheduler/simu/rtl/: tb_instruction_scheduler.sv
hw/module/instruction_scheduler/simu/scripts/: run_simu.sh
hw/module/ksk/module/ksk_if/rtl/: ksk_if_axi4_read.sv  ksk_if_cache_control.sv
hw/module/ksk/module/ksk_manager/rtl/: ksk_mgr_node.sv
hw/module/pe_alu/rtl/: pea_alu_core.sv
hw/module/pe_alu/simu/scripts/: run_simu.sh
hw/module/pe_pbs/: ARCHITECTURE_ANALYSIS.md  ARCHITECTURE_REFACTOR_CHANGELOG.md  VP_ARCHITECTURE_DESIGN.md
hw/module/pe_pbs/docs/: LUTHE_WOPBS_COMPREHENSIVE_ANALYSIS.md  PHASE1_VP_ENGINE_REFACTOR_PLAN.md  PHASE2_PBS_INTEGRATION_PLAN.md  PHASE3_OPENSSD_INTEGRATION_PLAN.md
hw/module/pe_pbs/module/openssd_wop_wrapper/rtl/: openssd_wop_wrapper.sv
hw/module/pe_pbs/rtl/: README_wop_pbs.md  README_wop_pbs_backup.md  bram_simple.sv  pe_pbs.sv  pe_pbs_with_bsk.sv  pe_pbs_with_ks.sv  pe_pbs_with_ntt_core_head.sv  poly_rotator_sub.sv  sample_extractor.sv  vp_pbs_inst_pkg.sv  wop_bit_extract_engine.sv  wop_circuit_bootstrap_woks_engine.sv  wop_pbs_kernel.sv  wop_pbs_kernel_lite.sv  wop_pbs_kernel_unified.sv  wop_premodswitch_engine.sv  wop_private_keyswitch_engine.sv  wop_vertical_packing_engine.sv  wop_vertical_packing_engine_legacy.sv.backup
hw/module/pe_pbs/rtl/tb/: Makefile  README.md  SUMMARY.md  run_tests.sh  tb_wop_bit_extract_engine.cpp  tb_wop_bit_extract_engine.sv  tb_wop_circuit_bootstrap_woks_engine.sv  tb_wop_pbs_kernel.cpp  tb_wop_pbs_kernel.sv  tb_wop_premodswitch_engine.cpp  tb_wop_premodswitch_engine.sv
hw/module/pe_pbs/simu/: README.md  README_全部测试.md
hw/module/pe_pbs/simu/rtl/: tb_wop_bit_extract_engine.sv
hw/module/pe_pbs/simu/tb_wop_bit_extract_engine/info/: file_list.json
hw/module/pe_pbs/simu/tb_wop_bit_extract_engine/rtl/: tb_wop_bit_extract_engine.sv
hw/module/pe_pbs/simu/tb_wop_bit_extract_engine/scripts/: bit_extract_golden.cpp  run.sh  run_simu.sh
hw/module/pe_pbs/simu/tb_wop_circuit_bootstrap_woks_engine/info/: file_list.json
hw/module/pe_pbs/simu/tb_wop_circuit_bootstrap_woks_engine/rtl/: tb_sim_models.sv  tb_wop_circuit_bootstrap_woks_engine.cpp  tb_wop_circuit_bootstrap_woks_engine.sv
hw/module/pe_pbs/simu/tb_wop_circuit_bootstrap_woks_engine/scripts/: cb_golden  cb_golden_main.cpp  circuit_bootstrap_golden.cpp  golden_out.txt  run.sh  run_circuit_bootstrap.sh  run_simu.sh  simple_test  simple_test.cpp  test_circuit_bootstrap.py
hw/module/pe_pbs/simu/tb_wop_pbs_kernel/rtl/: tb_wop_pbs_kernel.sv
hw/module/pe_pbs/simu/tb_wop_pbs_kernel/scripts/: run.sh  run_simu.sh
hw/module/pe_pbs/simu/tb_wop_premodswitch_engine/rtl/: tb_wop_premodswitch_engine.sv
hw/module/pe_pbs/simu/tb_wop_premodswitch_engine/scripts/: run.sh  run_simu.sh
hw/module/pe_pbs/simu/tb_wop_vertical_packing_engine/: BIGLUT_VERIFICATION_REPORT.md  CURRENT_STATUS.md  IMPLEMENTATION_PLAN.md  Makefile  POST_PROCESSING_REPORT.md  README.md  STAGE7_IMPLEMENTATION_REPORT.md  STAGE7_VERIFICATION_ANALYSIS.md  Stage7_PBS_Service_Design.md  clean  cmux_golden_result.txt  cmux_tree_analysis.sh  debug_ks_result_path.sh  debug_vp_detailed.sh  debug_vp_engine.sh  debug_vp_startup.sh  generate_cmux_test_data.py  ggsw_test_data.txt  performance_analysis.sh  quick_run.sh  quick_run_out.txt  quick_run_simple.sh  run.sh  test_axi_xstate_fix.sh  test_biglut_complete.sh  test_bits.txt  test_ks_fix.sh  test_lut.txt  test_modswitch.cpp  test_stage4_background.sh  test_stage4_full.sh  verify_algorithm.py  verify_post_processing.py
hw/module/pe_pbs/simu/tb_wop_vertical_packing_engine/info/: file_list.json
hw/module/pe_pbs/simu/tb_wop_vertical_packing_engine/rtl/: tb_wop_vertical_packing_engine.sv  tb_wop_vertical_packing_engine_clean.sv  tb_wop_vertical_packing_engine_full.sv  tb_wop_vertical_packing_engine_old.sv  tb_wop_vertical_packing_engine_original.sv  tb_wop_vertical_packing_engine_single.sv.bak
hw/module/pe_pbs/simu/tb_wop_vertical_packing_engine/scripts/: run_simu.sh  vertical_packing_golden.cpp
hw/module/pep_key_switch/rtl/: pep_key_switch.sv  pep_ks_result_format.sv
hw/module/top_common/rtl/: top_common_pc_definition_pkg.sv
scripts/: csd_gpu_build_tfhe_variant.sh  csd_gpu_deepnn_concrete_align_oneclick.sh  csd_gpu_nvmevirt_be_split_oneclick.sh  csd_gpu_nvmevirt_cb_step4only_oneclick.sh  csd_gpu_nvmevirt_cb_step4only_premod_oneclick.sh  csd_gpu_nvmevirt_deepnn_pbs_hotspot_oneclick.sh  csd_gpu_nvmevirt_he3db_trace_replay.sh  csd_gpu_nvmevirt_kspbs_split_oneclick.sh  csd_gpu_nvmevirt_kspbs_split_per_sample_oneclick.sh  csd_gpu_nvmevirt_macro_deepnn_fullflow_oneclick.sh  csd_gpu_nvmevirt_macro_deepnn_l2_oneclick.sh  csd_gpu_nvmevirt_macro_deepnn_multivariant_oneclick.sh  csd_gpu_nvmevirt_macro_deepnn_oneclick.sh  csd_gpu_nvmevirt_oneclick.sh  csd_gpu_nvmevirt_regression_oneclick.sh  csd_gpu_nvmevirt_softmax_div_split_n4_oneclick.sh  csd_gpu_nvmevirt_softmax_kspbs_split_n16_oneclick.sh  csd_gpu_nvmevirt_softmax_kspbs_split_n4_oneclick.sh  csd_gpu_nvmevirt_softmax_oneclick.sh  csd_host_ctrl_dpi_oneclick.sh  csd_no_fallback.sh
sw/gpu_runtime_service/: CMakeLists.txt
sw/gpu_runtime_service/src/: tfhe_gpu_executor.cpp
sw/gpu_runtime_service/tools/: cpu_reference_runner.cpp
tools/: pipeline_overlap_analyzer.py  softmax_fp64.py
(+40 files in other folders)
